<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/TambahMainView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">


    <LinearLayout
        android:id="@+id/tambahHeader"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:text="@string/app_name"
            android:textAlignment="center"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tambahHeader"
        android:layout_above="@id/tambahFooter">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etTambahTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/judul"
                android:backgroundTintMode="add"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_marginBottom="10dp"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/etTambahDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/deskripsi"
                android:backgroundTintMode="add"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_marginBottom="10dp"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/tvTambahDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:padding="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btnTambahCancel"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cancel"
                    android:layout_weight="0.5"/>

                <Button
                    android:id="@+id/btnTambahSubmit"
                    android:layout_margin="10dp"
                    android:text="@string/submit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/tambahFooter"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/all_right_reserved"/>

    </LinearLayout>


</RelativeLayout>